rest: allow to list metrics via GET /v1/metric
Change-Id: Ieff38be31b49f42fdc220a7b64fec40ec890deb9

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -37,7 +37,11 @@ It is also possible to send the *details* parameter in the *Accept* header:
 
 {{ scenarios['get-metric-details-in-accept']['doc'] }}
 
-It is possible to send metrics to the metric:
+To retrieve the list of all the metrics created, use the following request:
+
+{{ scenarios['list-metric']['doc'] }}
+
+It is possible to send measures to the metric:
 
 {{ scenarios['post-measures']['doc'] }}
 
