rest: allow to delete archive policies
Change-Id: I0fe368703b36a7a0e4774dcc82654e833f37c4c9

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -121,9 +121,9 @@ It is also possible to list archive policies:
 
 {{ scenarios['list-archive-policy']['doc'] }}
 
-.. WARNING::
+It is possible to delete an archive policy if it is not used by any metric:
 
-   It is not yet possible to delete an archive policy.
+{{ scenarios['delete-archive-policy']['doc'] }}
 
 Resources
 =========
