--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -78,7 +78,7 @@ method. It is possible to request for any other method by specifying the
 {{ scenarios['get-measures-max']['doc'] }}
 
 The list of aggregation method available is: *mean*, *sum*, *last*, *max*,
-*min*, *std*, *median* and *first*.
+*min*, *std*, *median*, *count* and *first*.
 
 Archive Policy
 ==============
@@ -110,6 +110,16 @@ is set to 2, it will be possible to send measures with timestamp back to 12:00.
 The REST API allows to create archive policies this way:
 
 {{ scenarios['create-archive-policy']['doc'] }}
+
+By default, all aggregation methods are computed and store, but it is possible
+to limit the aggregation methods used in an archive policy by sepcifying the
+list of aggregation method to use in the `aggregation_methods` attribute of an
+archive policy.
+
+{{ scenarios['create-archive-policy-without-max']['doc'] }}
+
+The list of aggregation methods can the list the methods, or a list of methods
+to not use by prefixing them by `-` (minus).
 
 Once the archive policy is created, the complete set of properties is computed
 and returned, with the URL of the archive policy. This URL can be used to
