rest: add support for percentile as aggregation method
Change-Id: Ic0e40aec219e23b85c2cc6ab758216b9b8452fb5

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -78,7 +78,8 @@ method. It is possible to request for any other method by specifying the
 {{ scenarios['get-measures-max']['doc'] }}
 
 The list of aggregation method available is: *mean*, *sum*, *last*, *max*,
-*min*, *std*, *median*, *count* and *first*.
+*min*, *std*, *median*, *first*, *count*, *first* and *Npct* (with 0 < N <
+100).
 
 Archive Policy
 ==============
