Add capabilities documentation
This change adds the missing capabilities section into
the documentation.

Change-Id: I480a10064db921d04029e91baa219ad2495acb15

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -207,6 +207,16 @@ The same endpoint can be used to append metrics to a resource:
 .. _Nova: http://launchpad.net/nova
 
 
+
+Capabilities
+============
+
+The list aggregation methods that can be used in Gnocchi is extendable and
+can differ between deployement. It is possible to get the supported list of
+aggregation methods from the API server:
+
+{{ scenarios['get-capabilities']['doc'] }}
+
 Timestamp format
 ================
 
