rest: add more operators in complex queries
Following the improvement done in the SQLAlchemy indexer driver, add
support in the REST API for more symbols.

Change-Id: I0dbeec7746b4eccb02d2fff376a500e01c68c792

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -245,8 +245,11 @@ Details about the resource can also be retrieved at the same time:
 {{ scenarios['search-resource-for-user-details']['doc'] }}
 
 
-The supported operators are: `=`, `<`, `>`, `<=`, `>=`, `!=`, `in`,
-`like`, `or`, `and` and `not`.
+The supported operators are: equal to (`=`, `==` or `eq`), less than (`<` or
+`lt`), greater than (`>` or `gt`), less than or equal to (`<=`, `le` or `≤`)
+greater than or equal to (`>=`, `ge` or `≥`) not equal to (`!=`, `ne` or `≠`),
+value is in (`in`), value is like (`like`), or (`or` or `∨`), and (`and` or
+`∧`) and negation (`not`).
 
 Aggregation across metrics
 ==========================
