--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -239,6 +239,17 @@ Details about the resource can also be retrieved at the same time:
 
 {{ scenarios['search-resource-for-user-details']['doc'] }}
 
+It's possible to search for old version of resources in the same ways:
+
+{{ scenarios['search-resource-history']['doc'] }}
+
+It is also possible to send the *history* parameter in the *Accept* header:
+
+{{ scenarios['search-resource-history-in-accept']['doc'] }}
+
+The timerange of the history can be set, too:
+
+{{ scenarios['search-resource-history-partial']['doc'] }}
 
 The supported operators are: equal to (`=`, `==` or `eq`), less than (`<` or
 `lt`), greater than (`>` or `gt`), less than or equal to (`<=`, `le` or `≤`)
