Add support for ArchivePolicy Rule Endpoints
The goal of this is to expose an end point where
user could define an archive policy rule mapping
to a metric pattern. There could be multiple rules
defined. This rule is used when a metric is created
to automatically assign a policy to the metric based
on matching pattern defined in the rule.

There will be a subsequent patch that leverages this
in the metric api.

Change-Id: I8a71f25fe25c4be20d14d695c52fa7cb6efcb14b

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -139,6 +139,45 @@ It is possible to delete an archive policy if it is not used by any metric:
 
 {{ scenarios['delete-archive-policy']['doc'] }}
 
+Archive Policy Rule
+===================
+
+Gnocchi provides the ability to define a mapping called `archive_policy_rule`.
+An archive policy rule defines a mapping between a metric and an archive policy.
+This gives users ability to pre-define rules so an archive policy is assigned to
+metrics based on a matched pattern.
+
+An archive policy rule has a few properties: a name to identify it, an archive
+policy name that will be used to store the policy name and metric pattern to
+match metric names.
+
+An archive policy rule for example could be a mapping to default a medium archive
+policy for any volume metric with a pattern matching `volume.*`. When a sample metric
+is posted with a name of `volume.size`, that would match the pattern and the
+rule applies and sets the archive policy to medium.
+
+To create a rule, the following API request should be used:
+
+{{ scenarios['create-archive-policy-rule']['doc'] }}
+
+The metric_pattern is used to pattern match so as some examples,
+
+- `*` matches anything
+- `disk.*` matches disk.io
+- `disk.io.*` matches disk.io.rate
+
+Once created, you can retrieve the rule information:
+
+{{ scenarios['get-archive-policy-rule']['doc'] }}
+
+It is also possible to list archive policy rules:
+
+{{ scenarios['list-archive-policy-rule']['doc'] }}
+
+It is possible to delete an archive policy rule:
+
+{{ scenarios['delete-archive-policy-rule']['doc'] }}
+
 Resources
 =========
 
