--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -246,6 +246,12 @@ greater than or equal to (`>=`, `ge` or `≥`) not equal to (`!=`, `ne` or `≠`
 value is in (`in`), value is like (`like`), or (`or` or `∨`), and (`and` or
 `∧`) and negation (`not`).
 
+The special attribute `duration` which is equivalent to `ended_at - started_at`
+is also available in the filtering queries.
+
+{{ scenarios['search-resource-duration']['doc'] }}
+
+
 Searching for values in metrics
 ===============================
 
