--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -239,7 +239,7 @@ Details about the resource can also be retrieved at the same time:
 
 {{ scenarios['search-resource-for-user-details']['doc'] }}
 
-It's possible to search for old version of resources in the same ways:
+It's possible to search for old revisions of resources in the same ways:
 
 {{ scenarios['search-resource-history']['doc'] }}
 
