doc: fix typo about duration/lifespan
Change-Id: I9c24b8c0354fca4c29a8ff72ab635d06a920772f

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -303,10 +303,10 @@ greater than or equal to (`>=`, `ge` or `≥`) not equal to (`!=`, `ne` or `≠`
 value is in (`in`), value is like (`like`), or (`or` or `∨`), and (`and` or
 `∧`) and negation (`not`).
 
-The special attribute `duration` which is equivalent to `ended_at - started_at`
+The special attribute `lifespan` which is equivalent to `ended_at - started_at`
 is also available in the filtering queries.
 
-{{ scenarios['search-resource-duration']['doc'] }}
+{{ scenarios['search-resource-lifespan']['doc'] }}
 
 
 Searching for values in metrics
