rest: implements /resource/generic/UUID/history
This change allows to get the history of one resource via the
/resource/generic/UUID/history instead of doing a search in the whole
resources list.

Change-Id: Ia282b5026c4d4211bf5e4dcc252c31bf734b0fe6
Closes-bug: #1479819

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -221,6 +221,10 @@ modified fields:
 
 {{ scenarios['patch-resource']['doc'] }}
 
+And to retrieve its modification history:
+
+{{ scenarios['get-patched-instance-history']['doc'] }}
+
 It possible to delete a resource altogether:
 
 {{ scenarios['delete-resource-generic']['doc'] }}
