rest: export overall status
This allows to access Gnocchi overall cluster status on /v1/status and
get some insight on what's going on. If you are admin.

Change-Id: I07f74b6686f7540bbec710a696287c6f0ba21dda

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -367,6 +367,14 @@ aggregation methods from the API server:
 
 {{ scenarios['get-capabilities']['doc'] }}
 
+Status
+======
+The overall status of the Gnocchi installation can be retrived via an API call
+reporting values such as the number of new measures to process for each metric:
+
+{{ scenarios['get-status']['doc'] }}
+
+
 Timestamp format
 ================
 
