Do not enable Keystone by default
Closes-Bug: #1520272

Change-Id: I4abf404e987a305368575d64bca93869ce344fcb

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -5,10 +5,19 @@
 Authentication
 ==============
 
-By default, the `api.middleware` configuration option is set to use the
-Keystone middleware. Therefore, you must authenticate using Keystone to use the
-API and provide an `X-Auth-Token` header with a valid token for each request
-sent to Gnocchi.
+By default, no authentication is configured in Gnocchi. You need to provides
+these headers in your HTTP requests:
+
+* X-User-Id
+* X-Project-Id
+
+The `X-Roles` header can also be provided in order to match role based ACL
+specified in `policy.json`.
+
+If you enable the OpenStack Keystone middleware, you only need to authenticate
+against Keystone and provide `X-Auth-Token` header with a valid token for each
+request sent to Gnocchi. The headers mentionned above will be filled
+automatically based on your Keystone authorizations.
 
 Metrics
 =======
