rest: add batch/measures support
This allows to post measures for several metric in a single HTTP call.

Change-Id: Ibb8be5f82900663b7d35a989b1bc22e2b2e39fdf

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -77,6 +77,14 @@ to retrieve, rather than all the granularities available:
 {{ scenarios['get-measures-granularity']['doc'] }}
 
 
+Measures batching
+=================
+It is also possible to batch measures sending, i.e. send several measures for
+different metrics in a simple call:
+
+{{ scenarios['post-measures-batch']['doc'] }}
+
+
 Archive Policy
 ==============
 
