Fix the typos in the gnocchi
Scan the source code, filter the results and fix the typos in the
source code.

doc/source/rest.j2
gnocchi/storage/__init__.py
gnocchi/tests/test_carbonara.py

Change-Id: Ia05ea57b1d7224fd76cf4e319e2dd157065024bf

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -6,7 +6,7 @@ Authentication
 ==============
 
 By default, the `api.middleware` configuration option is set to use the
-Keystone middleware. Therefore you must authenticate using Keystone to use the
+Keystone middleware. Therefore, you must authenticate using Keystone to use the
 API and provide an `X-Auth-Token` header with a valid token for each request
 sent to Gnocchi.
 
@@ -349,7 +349,7 @@ It can also be done by providing the list of metrics to aggregate:
 .. Note::
 
    This aggregation is done against the aggregates built and updated for
-   a metric when new measurements are posted in Gnocchi. Therefore the aggregate
+   a metric when new measurements are posted in Gnocchi. Therefore, the aggregate
    of this already aggregated data may not have sense for certain kind of
    aggregation method (e.g. stdev).
 
@@ -374,8 +374,8 @@ error is returned.
 Capabilities
 ============
 
-The list aggregation methods that can be used in Gnocchi is extendable and
-can differ between deployement. It is possible to get the supported list of
+The list aggregation methods that can be used in Gnocchi are extendable and
+can differ between deployments. It is possible to get the supported list of
 aggregation methods from the API server:
 
 {{ scenarios['get-capabilities']['doc'] }}
