doc: add granularity argument for measure retrieval
Change-Id: I8312efa7a7cf1e519cbc73eed6aa2f814c354cf3
Related-Bug: #1512740

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -71,6 +71,12 @@ method. It is possible to request for any other method by specifying the
 The list of aggregation method available is: *mean*, *sum*, *last*, *max*,
 *min*, *std*, *median*, *first*, *count* and *Npct* (with 0 < N < 100).
 
+It's possible to provide the `granularity` argument to specify the granularity
+to retrieve, rather than all the granularities available:
+
+{{ scenarios['get-measures-granularity']['doc'] }}
+
+
 Archive Policy
 ==============
 
