--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -161,11 +161,13 @@ It is also possible to list archive policies:
 
 It is possible to delete an archive policy if it is not used by any metric:
 
-.. note::
-   Archive policy cannot be deleted until all metrics associated with it
-   ain't removed by metricd daemon.
-
 {{ scenarios['delete-archive-policy']['doc'] }}
+
+.. note::
+
+   An archive policy cannot be deleted until all metrics associated with it
+   are removed by a metricd daemon.
+
 
 Archive Policy Rule
 ===================
