Fixed typo in documentation
Change-Id: Id0377c3b8efeb23744f89596e1e3c951c4fbdd2d

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -16,7 +16,7 @@ specified in `policy.json`.
 
 If you enable the OpenStack Keystone middleware, you only need to authenticate
 against Keystone and provide `X-Auth-Token` header with a valid token for each
-request sent to Gnocchi. The headers mentionned above will be filled
+request sent to Gnocchi. The headers mentioned above will be filled
 automatically based on your Keystone authorizations.
 
 Metrics
