doc: include an example with the `like' operator
Change-Id: I40d538b08d7dfa9305d576d4de68a94356b3d103
Closes-Bug: #1576835

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -346,6 +346,10 @@ values:
 
 {{ scenarios['search-resource-for-user']['doc'] }}
 
+Or even:
+
+{{ scenarios['search-resource-for-host-like']['doc'] }}
+
 Complex operators such as `and` and `or` are also available:
 
 {{ scenarios['search-resource-for-user-after-timestamp']['doc'] }}
