rest: allow to use X-Domain-Id in policy rules
Change-Id: Idfdcd1c46e7d0207d3959dd67d1cadb6a249068b
Closes-Bug: #1576804

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -12,7 +12,7 @@ these headers in your HTTP requests:
 * X-Project-Id
 
 The `X-Roles` header can also be provided in order to match role based ACL
-specified in `policy.json`.
+specified in `policy.json`, as `X-Domain-Id` to match domain based ACL.
 
 If you enable the OpenStack Keystone middleware, you only need to authenticate
 against Keystone and provide `X-Auth-Token` header with a valid token for each
