--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -41,10 +41,16 @@ To retrieve the list of all the metrics created, use the following request:
 
 {{ scenarios['list-metric']['doc'] }}
 
-Considering the large volume of metrics Gnocchi will store, query results are
-limited to `max_limit` value set in the configuration file. Returned results
-are ordered by metrics' id values. Default ordering and limits as well as page
-start can be modified using query parameters:
+.. note::
+
+  Considering the large volume of metrics Gnocchi will store, query results are
+  limited to `max_limit` value set in the configuration file. Returned results
+  are ordered by metrics' id values. To retrieve the next page of results, the
+  id of a metric should be given as `marker` for the beginning of the next page
+  of results.
+
+Default ordering and limits as well as page start can be modified
+using query parameters:
 
 {{ scenarios['list-metric-pagination']['doc'] }}
 
@@ -299,8 +305,12 @@ or using `details=true` in the query parameter:
 
 {{ scenarios['list-resource-generic-details']['doc'] }}
 
-Similar to metric list, query results are limited to `max_limit` value set in
-the configuration file. Returned results are ordered by resouces'
+.. note::
+
+  Similar to metric list, query results are limited to `max_limit` value set in
+  the configuration file.
+
+Returned results represent a single page of data and are ordered by resouces'
 revision_start time and started_at values:
 
 {{ scenarios['list-resource-generic-pagination']['doc'] }}
