doc: fix sphinx warning
This will ensure future build are not broken.

Change-Id: Ibc644db35fafbe7aeb09c1c9f14e8818527ef2d2

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -6,7 +6,7 @@ Authentication
 ==============
 
 By default, the authentication is configured to the "basic" mode. You need to
-provide an `Authorization' header in your HTTP requests with a valid username
+provide an `Authorization` header in your HTTP requests with a valid username
 (the password is not used). The "admin" password is granted all privileges,
 whereas any other username is recognize as having standard permissions.
 
