--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -408,9 +408,9 @@ resource type is ready to be used. If something unexpected occurs during this
 step, the state switches to `creation_error`.
 
 The same behavior occurs when the resource type is deleted. The state starts to
-switch to `deleting`, the resource type is no more usable. Then the tables are
-removed and the finally the resource_type is really deleted from the database.
-If some unexpected occurs the state switches to `deletion_error`.
+switch to `deleting`, the resource type is no longer usable. Then the tables are
+removed and then finally the resource_type is really deleted from the database.
+If some unexpected error occurs the state switches to `deletion_error`.
 
 Searching for resources
 =======================
@@ -518,7 +518,7 @@ the one described in `Searching for resources`_.
 {{ scenarios['get-across-metrics-measures-by-attributes-lookup']['doc'] }}
 
 It is possible to group the resource search results by any attribute of the
-requested resource type, and the compute the aggregation:
+requested resource type, and then compute the aggregation:
 
 {{ scenarios['get-across-metrics-measures-by-attributes-lookup-groupby']['doc'] }}
 
