--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -148,8 +148,11 @@ Archive Policy
 
 When sending measures for a metric to Gnocchi, the values are dynamically
 aggregated. That means that Gnocchi does not store all sent measures, but
-aggregates them over a certain period of time. Gnocchi provides several
-aggregation methods (mean, min, max, sum…) that are builtin.
+aggregates them over a certain period of time.
+
+Gnocchi provides several aggregation methods (mean, min, max, sum…) that are
+builtin. Those can be prefix by `rate:` to compute the rate of change before
+doing the aggregation.
 
 An archive policy is defined by a list of items in the `definition` field. Each
 item is composed of the timespan and the level of precision that must be kept
