enforce boundaries on overlap
if no boundary is set, the returned series does not necessarily
honour the overlap value. change behaviour so we require a boundary
if overlap is not 100%.

Fixes: #17

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -550,13 +550,11 @@ is set.
 When a boundary is set, Gnocchi expects that we have certain percent of
 timestamps common between timeseries. This percent is controlled by
 needed_overlap, which by default expects 100% overlap. If this percent is not
-reached, an error is returned. If no boundaries are set, Gnocchi aggregates and
-returns only the last contiguous range of common datapoints.
+reached, an error is returned.
 
 .. note::
 
-   Not setting a boundary may result in an extremely sparse result.
-   Additionally, it may not accurately reflect 'needed_overlap' value, if set.
+   If no boundaries are set, Gnocchi requires 100% overlap across all series
 
 The ability to fill in points missing from a subset of timeseries is supported
 by specifying a `fill` value. Valid fill values include any valid float or
