--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -117,19 +117,16 @@ resampled to a new granularity.
 
 {{ scenarios['get-measures-resample']['doc'] }}
 
+Or we can apply absolute to the values and then negate them for example.
+
+{{ scenarios['get-measures-transform']['doc'] }}
+
+Supported transformations are `absolute`, `negative` and `resample(sampling-in-second)`.
+
 .. note::
 
    Depending on the aggregation method and frequency of measures, resampled
    data may lack accuracy as it is working against previously aggregated data.
-
-
-Stored measures can be transformed during retrieval, with:
-
-{{ scenarios['get-measures-transform']['doc'] }}
-
-The example will first apply absolute to the values and then negate them.
-
-Supported transformations are `absolute` and `negative`.
 
 Measures batching
 =================
@@ -549,8 +546,8 @@ well.
 
 .. note::
 
-   Resampling is done prior to any reaggregation if both parameters are
-   specified.
+   Tranformations (eg: resample, absolute, ...) are done prior to any
+   reaggregation if both parameters are specified.
 
 Also, aggregation across metrics have different behavior depending
 on whether boundary values are set ('start' and 'stop') and if 'needed_overlap'
