--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -107,6 +107,9 @@ method. It is possible to request for any other method by specifying the
 The list of aggregation method available is: *mean*, *sum*, *last*, *max*,
 *min*, *std*, *median*, *first*, *count* and *Npct* (with 0 < N < 100).
 
+They can be prefixed by "rate:" (like rate:last) to compute the rate of change
+before doing the aggregation.
+
 It's possible to provide the `granularity` argument to specify the granularity
 to retrieve, rather than all the granularities available:
 
