supporting rolling aggregates
this implements rolling aggregates which works similar to how
pandas rolling works but more trivial. this differs from deprecated
moving_average by correctly matching points to trailing timestamp
rather than leading timestamp.

it does not return the NaN values that result in shift in values.

Closes: #186

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -139,7 +139,8 @@ Or we can apply absolute to the values and then negate them for example.
 
 {{ scenarios['get-measures-transform']['doc'] }}
 
-Supported transformations are `absolute`, `negative` and `resample(sampling-in-second)`.
+Supported transformations are `absolute`, `negative`,
+`rolling(aggregation-method, window-size)` and `resample(sampling-in-second)`.
 
 .. note::
 
