transformation: allow to do math
This change introduces a math() transformer to do simple
mathematics on each points of the timeserie.

It uses numexpr library of pydata project.

Releasenote have not been added because it already have a generic entry
for the new transforamtion API

Closes-bug: #342

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -138,7 +138,8 @@ Or we can apply absolute to the values and then negate them for example.
 
 {{ scenarios['get-measures-transform']['doc'] }}
 
-Supported transformations are `absolute`, `negative` and `resample(sampling-in-second)`.
+Supported transformations are `math(v - 100 /10)`, `absolute`, `negative` and
+`resample(sampling-in-second)`.
 
 .. note::
 
