Allow to rename archive policy rules
Closes #374

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -302,6 +302,10 @@ It is possible to delete an |archive policy| rule:
 
 {{ scenarios['delete-archive-policy-rule']['doc'] }}
 
+It is possible to rename an archive policy rule:
+
+{{ scenarios['rename-archive-policy-rule']['doc'] }}
+
 Resources
 =========
 
