aggregates: allow wildcard as metric name

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -826,6 +826,10 @@ such as the one described in the :ref:`resource search API <search-resource>`.
 
 {{ scenarios['get-aggregates-by-attributes-lookup']['doc'] }}
 
+And metric name can be `wildcard` too.
+
+{{ scenarios['get-aggregates-by-attributes-lookup-wildcard']['doc'] }}
+
 Groupby
 ~~~~~~~
 
