aggregates: add rateofchange method
This change adds rateofchange method to Dynamic Aggregate API.

--- a/doc/source/rest.j2
+++ b/doc/source/rest.j2
@@ -853,6 +853,7 @@ Function operations
    (tan (<operations>))
    (floor (<operations>))
    (ceil (<operations>))
+   (rateofchange (<operations>))
 
 
 
